fix pattern docker name

--- a/pom.xml
+++ b/pom.xml
@@ -126,7 +126,7 @@
                 <configuration>
                     <images>
                         <image>
-                            <name>SmartCampusCollector</name>
+                            <name>smartcampuscollector</name>
                             <alias></alias>
                             <build>
                                 <assembly>
