--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,11 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>org.kevoree.mwg.plugins</groupId>
+            <artifactId>leveldb</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>io.spray</groupId>
             <artifactId>spray-can_2.11</artifactId>
             <version>1.3.3</version>
