--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,11 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>eu.ace-design.deposit</groupId>
+            <artifactId>organizational</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>io.spray</groupId>
             <artifactId>spray-can_2.11</artifactId>
             <version>1.3.3</version>
