--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <maven.compiler.target>1.6</maven.compiler.target>
         <encoding>UTF-8</encoding>
         <scala.version>2.11.5</scala.version>
+        <scala.tools.version>2.11</scala.tools.version>
         <scala.compat.version>2.10</scala.compat.version>
     </properties>
 
@@ -106,14 +107,8 @@
         </dependency>
         <dependency>
             <groupId>org.specs2</groupId>
-            <artifactId>specs2-core_${scala.compat.version}</artifactId>
-            <version>2.4.16</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.scalatest</groupId>
-            <artifactId>scalatest_${scala.compat.version}</artifactId>
-            <version>2.2.4</version>
+            <artifactId>specs2_${scala.tools.version}</artifactId>
+            <version>2.3.12</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
