--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <maven.compiler.source>1.6</maven.compiler.source>
         <maven.compiler.target>1.6</maven.compiler.target>
         <encoding>UTF-8</encoding>
+        <mwdb.version>1-SNAPSHOT</mwdb.version>
         <scala.version>2.11.5</scala.version>
         <scala.tools.version>2.11</scala.tools.version>
         <scala.compat.version>2.10</scala.compat.version>
@@ -21,7 +22,7 @@
         <dependency>
             <groupId>org.kevoree.mwg.plugins</groupId>
             <artifactId>rest</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${mwdb.version}</version>
         </dependency>
         <dependency>
             <groupId>org.scala-lang</groupId>
@@ -31,17 +32,17 @@
         <dependency>
             <groupId>org.kevoree.mwg</groupId>
             <artifactId>core</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${mwdb.version}</version>
         </dependency>
         <dependency>
             <groupId>org.kevoree.mwg.plugins</groupId>
             <artifactId>leveldb</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${mwdb.version}</version>
         </dependency>
         <dependency>
             <groupId>org.kevoree.mwg.plugins</groupId>
             <artifactId>ml</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${mwdb.version}</version>
         </dependency>
 
         <dependency>
