--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
         <maven.compiler.source>1.6</maven.compiler.source>
         <maven.compiler.target>1.6</maven.compiler.target>
         <encoding>UTF-8</encoding>
-        <mwdb.version>2</mwdb.version>
+        <mwdb.version>4-SNAPSHOT</mwdb.version>
         <scala.version>2.11.5</scala.version>
         <scala.tools.version>2.11</scala.tools.version>
         <scala.compat.version>2.10</scala.compat.version>
