--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,1 +1,9 @@
 port = 11000
+akka {
+  # Log the complete configuration at INFO level when the actor system is started.
+  # This is useful when you are uncertain of what configuration is used.
+  log-config-on-start = on
+}
+spray.can.server {
+  registration-timeout = 5s
+}
